--- a/app/css/task-add.css
+++ b/app/css/task-add.css
@@ -16,6 +16,7 @@
 .task-add-etc-wrap {
     display: flex;
     align-items: center;
+    gap: 5px;
 }
 
 .task-add-label {
